fix spacing between posts on the dashboard

--- a/src/projects/detail/containers/FeedContainer.scss
+++ b/src/projects/detail/containers/FeedContainer.scss
@@ -8,4 +8,8 @@
 .feed-card {
   @include stand-alone-item-shadow;
   border-radius: $card-border-radius;
+
+  & + & {
+    margin-top: 2 * $base-unit;
+  }
 }
